	.cabal one or the .pkg one. Add -ignore-package glib when compiling
	modules in each package (conditionally on USE_CABAL) since otheriwse
	if the package is already installed the compilation would fail. Modify
	the package registering code. Use sed to substitute for ${pkglibdir}
	since ghc-pkg no longer does substitution. Also substitute for
	${modules} the list of modules in the package.

2005-03-18 Duncan Coutts <duncan@coutts.uklinux.net>

	* mk/common.mk: temporary fix for building with GHC 6.4. Temporary
	until we fix c2hs to not override the pragmas at the top of generated
	files.

2005-03-16 Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/Graphics/UI/Gtk/Misc/Adjustment.chs,
	gtk/Graphics/UI/Gtk/Misc/Arrow.chs,
	gtk/Graphics/UI/Gtk/Misc/Calendar.chs.pp,
	gtk/Graphics/UI/Gtk/Misc/DrawingArea.chs,
	gtk/Graphics/UI/Gtk/Misc/EventBox.chs.pp,
	gtk/Graphics/UI/Gtk/Misc/HandleBox.chs,
	gtk/Graphics/UI/Gtk/Misc/SizeGroup.chs,
	gtk/Graphics/UI/Gtk/Misc/Tooltips.chs.pp,
	gtk/Graphics/UI/Gtk/Misc/Viewport.chs: documentation changes and code
	formatting changes.

	* Makefile.am: specify AUTOMAKE_OPTIONS = 1.8 to require that version
	of automake.

	* mozembed/Graphics/UI/Gtk/MozEmbed/.cvsignore: add .cvsignore file,
	but mainly this file being present will force a normal CVS checkout to
	create the directory, the lack of which will break the build. On the
	quest to make a clean CVS checkout build "just work"!

2005-03-15 Duncan Coutts <duncan@coutts.uklinux.net>

	* glib/System/Glib/FFI.hs: add maybeNull function which is used by
	marshaling functions to help marshal values that might be NULL into a
	Maybe type where NULL gets mapped to Nothing.

	* gtk/Graphics/UI/Gtk/Buttons/Button.chs.pp,
	gtk/Graphics/UI/Gtk/Buttons/CheckButton.chs,
	gtk/Graphics/UI/Gtk/Buttons/ToggleButton.chs: documentation changes
	and code formatting changes.

	* gtk/Graphics/UI/Gtk/Abstract/Range.chs: Haddock markup fixes.

	* gtk/Graphics/UI/Gtk/Display/AccelLabel.chs,